fixed gap on leftside of navbar

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #469597;
+    margin: 0;
 }
 
 ul {
@@ -29,7 +30,7 @@ nav {
     top: 0px;
     width: 100%;
     border-bottom: solid black 2px;
-    background-color: #BBC6C8;
+    background-color: #E5E3E4;
 }
 
 .intro>h1 {
@@ -73,6 +74,10 @@ nav {
 
 .intro {
     background-color: #5BA199;
+}
+
+.projects {
+    background-color: #BBC6C8;
 }
 
 .mylinks {
